fix wrap css

--- a/webui/react/src/pages/F_ExpList/glide-table/ColumnPickerMenu.module.scss
+++ b/webui/react/src/pages/F_ExpList/glide-table/ColumnPickerMenu.module.scss
@@ -11,4 +11,7 @@
     display: flex;
     justify-content: space-between;
   }
+  .rows {
+    text-wrap: nowrap;
+  }
 }
